--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,10 +25,32 @@ services:
             PMA_HOST: mysql
             PMA_USER: root
             PMA_PASSWORD: '${DB_PASSWORD}'
+            UPLOAD_LIMIT: 64M
         ports:
             - '8088:80'
         networks:
             - cyber
+    laravel:
+        container_name: '${APP_NAME}_laravel'
+        build:
+            context: ./docker
+            dockerfile: Dockerfile.laravel
+        working_dir: /var/www/html
+        command: php artisan serve --host=0.0.0.0 --port=8010
+        ports:
+            - '8010:8010'
+        networks:
+            - cyber
+        volumes:
+            - './:/var/www/html'
+        depends_on:
+            - mysql
+        environment:
+            DB_HOST: mysql
+            DB_PORT: 3306
+            DB_DATABASE: '${DB_DATABASE}'
+            DB_USERNAME: '${DB_USERNAME}'
+            DB_PASSWORD: '${DB_PASSWORD}'
 networks:
     cyber:
         driver: bridge
