--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "guzzlehttp/guzzle": "^7.8",
         "laravel/framework": "^5.8",
         "laravel/tinker": "^1.0",
+        "predis/predis": "^3.3",
         "timehunter/laravel-google-recaptcha-v3": "^2.2",
         "tymon/jwt-auth": "dev-develop"
     },
